# gp-data-matcha

./: .gitignore  README.md  pyproject.toml
.claude/skills/audit-er-results/: skill.md
.github/workflows/: er_container.yml
scripts/: audit_false_negatives.py  audit_low_confidence.py  cli.py  constants.py  databricks_io.py  entity_config.py  pipeline.py
scripts/analysis/: baseline_3source.py  cross_cycle_audit.py  regression_check.py  upload_results.py
scripts/configs/: candidacy.py  elected_official.py
tests/: conftest.py  dummy_data_elected.csv  test_audit.py  test_candidacy_config.py  test_cli.py  test_constants.py  test_databricks_io.py  test_elected_official_config.py  test_entity_config.py  test_integration.py  test_pipeline.py
