[project]
name = "gp-data-matcha"
version = "0.1.0"
description = "Entity resolution pipeline for multi-source candidacy matching"
requires-python = ">=3.14"
dependencies = [
    "click",
    "duckdb",
    "nameparser",
    "pandas",
    "splink>=4.0.15",
    "vl-convert-python>=1.9.0.post1",
    "databricks-sql-connector>=3.0.0,<5.0.0",
    "databricks-sdk>=0.30.0,<1.0.0",
    "pyarrow",
    "rapidfuzz>=3.14.3",
    "numpy",
]

[dependency-groups]
dev = [
    "jupyter",
    "matplotlib",
    "pytest",
]

