[project]
name = "gp-data-matcha"
version = "0.1.0"
description = "Entity resolution pipeline for multi-source candidacy matching"
requires-python = ">=3.11"
dependencies = [
    "click",
    "duckdb",
    "nameparser",
    "pandas",
    "splink>=4.0.15",
    "vl-convert-python>=1.9.0.post1",
]

[dependency-groups]
dev = [
    "jupyter",
    "matplotlib",
    "pytest",
]

